v4.6b: fixed overflow of videos on commworks page

--- a/resources/styles/comm-works.css
+++ b/resources/styles/comm-works.css
@@ -148,6 +148,15 @@
     border-radius: 8px;
 }
 
+.image-card video {
+  width: 60vw;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+  border: 1px solid black;
+  border-radius: 8px;
+}
+
 .image-info {
     display: flex;
     flex-direction: column;
